--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -25,8 +25,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        >
 
         <com.sentaroh.android.Utilities3.Widget.CustomTabLayout
             android:id="@+id/about_tab_view"
@@ -39,8 +39,7 @@
             app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
             app:tabMaxWidth="0dp"
             app:tabGravity="fill"
-            app:tabMode="fixed"
-            />
+            app:tabMode="scrollable" />
 
         <com.sentaroh.android.Utilities3.Widget.CustomViewPager
             android:id="@+id/about_view_pager"
@@ -55,11 +54,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/msgs_common_dialog_close"
-            android:textAppearance="@android:style/TextAppearance.Large"/>
+            android:textAppearance="@android:style/TextAppearance.Large"	/>
 
     </LinearLayout>
 
 </LinearLayout>
-
-
-
