--- a/app/src/main/res/layout/main_dialog_progress_spin.xml
+++ b/app/src/main/res/layout/main_dialog_progress_spin.xml
@@ -9,48 +9,27 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:orientation="horizontal" >
 
         <ProgressBar
             android:id="@+id/main_dialog_progress_spin_progressBar"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp" />
 
-        <LinearLayout
+        <com.sentaroh.android.Utilities3.Widget.NonWordwrapTextView
+            android:id="@+id/main_dialog_progress_spin_syncmsg"
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/main_dialog_progress_spin_syncprof"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:lines="1"
-                android:ellipsize="end"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <com.sentaroh.android.Utilities3.Widget.NonWordwrapTextView
-                android:id="@+id/main_dialog_progress_spin_syncmsg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:ellipsize="end"
-                android:gravity="top"
-                android:lines="3"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        </LinearLayout>
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
     <Button
