--- a/app/src/main/res/layout/main_zip_file.xml
+++ b/app/src/main/res/layout/main_zip_file.xml
@@ -14,8 +14,8 @@
 
         <LinearLayout
             android:id="@+id/zip_file_view"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <LinearLayout
@@ -40,17 +40,33 @@
                     android:layout_marginLeft="2dp"
                     android:minHeight="40dp" />
             </LinearLayout>
-            <TextView
-                android:id="@+id/zip_file_info"
+            <LinearLayout
+                android:id="@+id/zip_file_info_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:text="Small Text"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:orientation="horizontal" >
+                <TextView
+                    android:id="@+id/zip_file_info_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="Small Text"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                <Button
+                    android:id="@+id/zip_file_info_close_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/msgs_zip_zip_file_info_close_button"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+            </LinearLayout>
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
@@ -83,7 +99,7 @@
 
             <TextView
                 android:id="@+id/zip_file_empty"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
@@ -92,7 +108,7 @@
 
             <ListView
                 android:id="@+id/zip_file_list"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:layout_marginLeft="5dp"
@@ -101,6 +117,39 @@
                 android:fastScrollAlwaysVisible="false"
                 android:fastScrollEnabled="false" />
 
+            <LinearLayout
+                android:id="@+id/zip_file_copy_cut_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/dialog_box_outline">
+
+                <TextView
+                    android:id="@+id/zip_file_copy_cut_type_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="Copy\nLocal"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+                <com.sentaroh.android.Utilities3.Widget.NonWordwrapButton
+                    android:id="@+id/zip_file_copy_cut_item"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical|left"
+                    android:lines="2"
+                    android:text="/storage/emulated/0/DCIM"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                <Button
+                    android:id="@+id/zip_file_copy_cut_clear_btn"
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
+            </LinearLayout>
 
             <include layout="@layout/context_view_zip" />
 
