--- a/app/src/main/res/values/string_en.xml
+++ b/app/src/main/res/values/string_en.xml
@@ -67,6 +67,9 @@
         <string name="msgs_zip_cont_header_copy">Copy</string>
         <string name="msgs_zip_cont_header_cut">Cut</string>
         <string name="msgs_zip_local_file_clear_copy_cut_item">Clear</string>
+        <string name="msgs_zip_local_file_clear_copy_cut_from_local">Local</string>
+        <string name="msgs_zip_local_file_clear_copy_cut_from_zip">ZIP</string>
+        <string name="msgs_zip_local_file_clear_copy_cut_list_cleared">Copy/Cut list cleared.</string>
         <string name="msgs_zip_local_file_rename_title">Rename</string>
         <string name="msgs_zip_local_file_rename_confirm_title">Do you want to rename following item?</string>
         <string name="msgs_zip_local_file_rename_completed">Rename completed, Name=%s</string>
@@ -102,6 +105,7 @@
         <string name="msgs_zip_local_folder_empty">Folder is empty.</string>
         <string name="msgs_zip_zip_file_info" formatted="false">Size=%s, Items=%s, Encoding=%s</string>
         <string name="msgs_zip_zip_file_info_temporary">Readonly ZIP file</string>
+        <string name="msgs_zip_zip_file_info_close_button">Close this ZIP</string>
         <string name="msgs_zip_zip_item_property_file" formatted="false">Last modified time=%s\nCompress Method=%s\nEncryption Method=%s\nCompressed size=%,d\nUncmpress size=%,d\nCompression ratio=%d%%</string>
         <string name="msgs_zip_zip_item_property_directory" formatted="false">Item count=%s\nCompressed size=%,d\nUncmpress size=%,d\nCompression ratio=%d%%</string>
         <string name="msgs_zip_zip_item_property_encrypted_yes">Yes</string>
